--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,8 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "logistics.mlnx.com.logistics"
-        minSdkVersion 21
+        applicationId "com.mlnx.logistics"
+        minSdkVersion 16
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
